--- a/LesMagouilleurs/LesMagouilleurs.csproj
+++ b/LesMagouilleurs/LesMagouilleurs.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Compile Include="Button.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="PlayerInterface.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ressources.cs" />
